# nano-vllm

./: Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: pr.yaml
apps/server/: server.py
nanovllm/engine/: block_manager.py  model_runner.py
nanovllm/layers/: attention.py  layernorm.py  mps_optimized_attention.py  optimized_attention.py  sampler.py
nanovllm/models/: qwen3.py
nanovllm/utils/: advanced_optimizations.py  loader.py  optimizations.py  torch_compile_utils.py
scripts/: install_nvidia_tegra_pytorch.sh  mini_bench.py
tests/: test_generation_after_fix.py  test_nano_vs_hf_fast.py
